fix(#91): private key() + Stream.toList() in InMemoryActorTrustScoreRepository